--- a/src/App.css
+++ b/src/App.css
@@ -1389,3 +1389,13 @@
     font-size: 0.75rem;
   }
 }
+
+.benefit-summaries {
+  margin-top: 0.25rem;
+  font-size: 0.92em;
+  color: #555;
+  line-height: 1.4;
+}
+.benefit-summary-item {
+  margin-bottom: 0.15em;
+}
